--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.0.10
   location: ^5.0.0
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.2
 
 
 
