--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^4.8.4
   firebase_storage: ^11.2.5
   image_picker: ^1.0.1
+  geolocator: ^9.0.2
+
 
 
 
@@ -72,6 +74,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/Park me-logos_black.png
+     - assets/parking.gif
+     - assets/register.png
+     - assets/parking-amico.png
+     - assets/Signup.png
+     - assets/Login.png
+     - assets/car.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
