--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
      - assets/parking_marker.png
      - assets/parking_marker1.png
      - assets/parking_marker2.png
+     - assets/parking_marker3.png
      - assets/parking.gif
      - assets/register.png
      - assets/parking-amico.png
