--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_maps_flutter: ^2.0.10
   geolocator: ^9.0.2
   location: ^5.0.0
+  latlong2: ^0.9.0
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.2
   firebase_core: ^2.15.0
