--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.0.10
+  flutter_polyline_points: ^1.0.0
   geolocator: ^9.0.2
   location: ^5.0.0
   latlong2: ^0.9.0
