--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.0.10
   flutter_polyline_points: ^1.0.0
+  google_maps_webservice: ^0.0.19
   geolocator: ^9.0.2
   location: ^5.0.0
   latlong2: ^0.9.0
