--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   cloud_firestore: ^4.8.4
   firebase_storage: ^11.2.5
   image_picker: ^1.0.1
-  
+  flutter_polyline_points: ^1.0.0
+  url_launcher: ^6.1.12
 
 
 
