--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  provider: ^6.0.5
+    
   google_maps_flutter: ^2.0.10
   flutter_polyline_points: ^1.0.0
   google_maps_webservice: ^0.0.19
