user auth state

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
      - assets/Parking-amico.png
      - assets/profile.png
      - assets/form.png
+     - assets/info.png
 
   #   - images/a_dot_ham.jpeg
 
