--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.2.5
   image_picker: ^1.0.1
   url_launcher: ^6.1.12
+  android_intent_plus: ^4.0.2
 
 
 
@@ -93,6 +94,8 @@ flutter:
      - assets/Parking-amico.png
      - assets/profile.png
      - assets/form.png
+     - assets/info.png
+     - assets/google-pay.png
 
   #   - images/a_dot_ham.jpeg
 
