--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:label="mapsss"
+        android:label="ParkMe"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
