--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   google_maps_flutter: ^2.0.10
   flutter_polyline_points: ^1.0.0
   google_maps_webservice: ^0.0.19
-  intl: ^0.18.1
+  intl: ^0.18.0
   geolocator: ^9.0.2
   location: ^5.0.0
   latlong2: ^0.9.0
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^1.0.1
   url_launcher: ^6.1.12
   android_intent_plus: ^4.0.2
+  pay: ^1.1.2
 
 
 
